fix alignment of download link

--- a/src/scss/pages/_cv.scss
+++ b/src/scss/pages/_cv.scss
@@ -48,6 +48,7 @@
   display: inline-flex;
   padding: 0.5rem;
   font-weight: 600;
+  align-items: center;
 }
 
 svg.paper {
